# ZEEK

./: .gitignore  README.md  docker-compose.yml
.circleci/: config.yml
backend/: README.md  backend.dockerfile  (+2 more)
backend/app/: prestart.sh  pyproject.toml
backend/app/app/alembic/versions/: 0dc5983c6902_setup_models_on_database.py  2145a1191d67_setup_models_on_database.py  21d0215c899c_setup_models_on_database.py  4c587fad4cac_setup_models_on_database.py  5c4901278fa4_setup_models_on_database.py  6109cd79fdf0_setup_models_on_database.py  67239a26e459_setup_models_on_database.py  7ccfe0675591_setup_models_on_database.py  8584459a0cb6_setup_models_on_database.py  8885cbf27e22_setup_models_on_database.py  895f2236b85d_setup_models_on_database.py  8db645a6b05d_setup_models_on_database.py  9c829b67b5cf_setup_models_on_database.py  a7f77f10ba3c_setup_models_on_database.py  ae22760b545a_setup_models_on_database.py  b2e35189beac_setup_models_on_database.py  d028fab1e48f_setup_models_on_database.py  d1f0e67c15fc_setup_models_on_database.py  deaf9e65471b_setup_models_on_database.py  e2c09e1196c3_setup_models_on_database.py  f1e464eec3f3_setup_models_on_database.py  f68f49ed2ae2_setup_models_on_database.py  fbd6d60fbc55_setup_models_on_database.py  fbee9393309e_setup_models_on_database.py
backend/app/app/api/: api.py
backend/app/app/api/endpoints/: user.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  user.py
backend/app/app/db/: init_db.py
backend/app/app/models/: user.py
backend/app/app/schemas/: user.py
backend/app/app/utils/: utils.py
(+63 files in other folders)
